--- a/src/components/Principal/Principal.css
+++ b/src/components/Principal/Principal.css
@@ -1,8 +1,7 @@
 .App-principal {
   box-sizing: border-box;
   position: relative;
-  margin-top: 50px;
-  padding: 24px;
+  padding: 50px 24px 24px 24px;
   background-color: var(--PRINCIPAL-BACKGROUND);
   display: flex;
   align-items: center;
@@ -17,13 +16,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 80%;
+  max-width: 500px;
 }
 
 .App-title {
   margin: 0;
   padding: 0;
-  font-size: 36px;
+  font-size: var(--PRINCIPAL-TITLE-SIZE);
   font-family: 'Anton', sans-serif;
   color: #ff7373;
 }
@@ -31,7 +31,7 @@
 .App-subtitle {
   margin: 0;
   padding: 0;
-  font-size: 24px;
+  font-size: var(--PRINCIPAL-SUBTITLE-SIZE);
 }
 
 .App-list {
