--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   --TOGGLE-BACKGROUND: darkblue;
   --TOGGLE-CIRCLE-BACKGROUND: white;
   --TOGGLE-BORDER: white;
-  --PRINCIPAL-BACKGROUND: #E3FFE3;
+  --PRINCIPAL-COLOR: #E3FFE3;
   --SECONDARY-COLOR: #333;
+  --ACCENT-BACKGROUND: #ff7373;
   --PRINCIPAL-TITLE-SIZE: 24px;
   --PRINCIPAL-SUBTITLE-SIZE: 18px;
   text-align: center;
@@ -15,14 +16,14 @@
   --TOGGLE-BACKGROUND: darkblue;
   --TOGGLE-CIRCLE-BACKGROUND: white;
   --TOGGLE-BORDER: white;
-  --PRINCIPAL-BACKGROUND: #333;
+  --PRINCIPAL-COLOR: #333;
   --SECONDARY-COLOR: white;
 }
 .light-mode {
   --TOGGLE-BACKGROUND: lightseagreen;
   --TOGGLE-CIRCLE-BACKGROUND: yellow;
   --TOGGLE-BORDER: #333;
-  --PRINCIPAL-BACKGROUND: #E3FFE3;
+  --PRINCIPAL-COLOR: #E3FFE3;
   --SECONDARY-COLOR: #333;
 }
 
