--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,8 +10,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--PRINCIPAL-BACKGROUND);
+  background-color: var(--PRINCIPAL-COLOR);
 }
+
+.App-menu {
+  z-index: 1;
+}
+/** Button */
 
 .App-button {
   width: 24px;
@@ -19,34 +24,37 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: absolute;
+  top: 24px;
+  z-index: 1;
 }
 
-.App-button--opened .App-button-bar--top {
+.App-menu--opened .App-button-bar--top {
   transform: rotate(45deg) translateY(12px);
   transition: 0.55s 0.5s;
 }
 
-.App-button--opened .App-button-bar--bottom {
+.App-menu--opened .App-button-bar--bottom {
   transform: rotate(-45deg) translateY(-12px);
   transition: 0.55s 0.5s;
 }
 
-.App-button--opened .App-button-bar--middle {
+.App-menu--opened .App-button-bar--middle {
   visibility: hidden;
   transition: 0.3s 0.3s;
 }
 
-.App-button--closed .App-button-bar--top {
+.App-menu--closed .App-button-bar--top {
   transform: rotate(0) translateY(0);
   transition: 0.55s 0.5s;
 }
 
-.App-button--closed .App-button-bar--bottom {
+.App-menu--closed .App-button-bar--bottom {
   transform: rotate(0) translateY(0);
   transition: 0.55s 0.5s;
 }
 
-.App-button--closed .App-button-bar--middle {
+.App-menu--closed .App-button-bar--middle {
   visibility: visible;
   transition: 0.7s 0.7s;
 }
@@ -55,15 +63,87 @@
   height: 6px;
   border: 3px;
   width: 100%;
+}
+
+.App-menu--closed .App-button-bar {
   background-color: var(--SECONDARY-COLOR);
 }
 
-.App-link {
-  margin-right: 12px;
-  color: var(--SECONDARY-COLOR)
+.App-menu--opened .App-button-bar {
+  background-color: var(--PRINCIPAL-COLOR);
 }
 
-.App-link:hover {
-  color: 	#ff7373;
-  font-weight: bold;
+@media (min-width: 720px) {
+  .App-button {
+    display: none;
+  }
+}
+
+/** Button */
+
+/** Nav */
+.App-nav {
+  box-sizing: border-box;
+  background-color: var(--SECONDARY-COLOR);
+  position: absolute;
+  top: 0;
+  left: -200px;
+  padding: 48px 24px 24px 24px;
+  height: 100vh;
+  width: 200px;
+}
+
+.App-nav-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.App-menu--opened .App-nav-background {
+  background-color: rgba(51,51,51,0.7);
+  visibility: visible;
+  transition: 0.7s 0.7s;
+}
+
+.App-menu--closed .App-nav-background {
+  background-color: rgba(51,51,51,0);
+  visibility: hidden;
+  transition: 0.7s 0.7s;
+}
+
+.App-menu--opened .App-nav {
+  transform: translateX(200px);
+  transition: 0.7s 0.7s;
+}
+
+.App-menu--closed .App-nav {
+  transform: translateX(0);
+  transition: 0.7s 0.7s;
+}
+
+.App-link {
+  margin: 12px;
+  color: var(--PRINCIPAL-COLOR);
+  display: block;
+}
+
+@media (min-width: 720px) {
+  .App-nav {
+    background-color: transparent;
+    position: static;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+  }
+  .App-link:hover {
+    color: 	var(--ACCENT-BACKGROUND);
+    font-weight: bold;
+  }
+  .App-link {
+    color: var(--SECONDARY-COLOR);
+    margin: 0 12px 0 0;
+    display: inline-block;
+  }
 }
