--- a/src/components/Principal/Principal.css
+++ b/src/components/Principal/Principal.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   position: relative;
   padding: 50px 24px 24px 24px;
-  background-color: var(--PRINCIPAL-BACKGROUND);
+  background-color: var(--PRINCIPAL-COLOR);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +11,7 @@
 
 .App-title-box {
   padding: 24px;
-  border: 2px solid #ff7373;
+  border: 2px solid var(--ACCENT-BACKGROUND);
   border-radius: 3px;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
   padding: 0;
   font-size: var(--PRINCIPAL-TITLE-SIZE);
   font-family: 'Anton', sans-serif;
-  color: #ff7373;
+  color: var(--ACCENT-BACKGROUND);
 }
 
 .App-subtitle {
