--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -88,7 +88,7 @@
   position: absolute;
   top: 0;
   left: -200px;
-  padding: 48px 24px 24px 24px;
+  padding: 60px 24px 24px 24px;
   height: 100vh;
   width: 200px;
 }
@@ -124,7 +124,7 @@
 }
 
 .App-link--menu {
-  margin: 12px;
+  padding: 12px;
   color: var(--PRINCIPAL-COLOR);
   display: block;
 }
