create: button component

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --TOGGLE-BORDER: white;
   --PRINCIPAL-COLOR: #E3FFE3;
   --SECONDARY-COLOR: #333;
-  --ACCENT-BACKGROUND: #ff7373;
+  --ACCENT-COLOR: #ff7373;
   --PRINCIPAL-TITLE-SIZE: 24px;
   --PRINCIPAL-SUBTITLE-SIZE: 18px;
   text-align: center;
