--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@
 }
 /** Button */
 
-.App-button {
+.App-burger {
   width: 24px;
   height: 24px;
   display: flex;
@@ -29,52 +29,52 @@
   z-index: 1;
 }
 
-.App-menu--opened .App-button-bar--top {
+.App-menu--opened .App-burger-bar--top {
   transform: rotate(45deg) translateY(12px);
   transition: 0.55s 0.5s;
 }
 
-.App-menu--opened .App-button-bar--bottom {
+.App-menu--opened .App-burger-bar--bottom {
   transform: rotate(-45deg) translateY(-12px);
   transition: 0.55s 0.5s;
 }
 
-.App-menu--opened .App-button-bar--middle {
+.App-menu--opened .App-burger-bar--middle {
   visibility: hidden;
   transition: 0.3s 0.3s;
 }
 
-.App-menu--closed .App-button-bar--top {
+.App-menu--closed .App-burger-bar--top {
   transform: rotate(0) translateY(0);
   transition: 0.55s 0.5s;
 }
 
-.App-menu--closed .App-button-bar--bottom {
+.App-menu--closed .App-burger-bar--bottom {
   transform: rotate(0) translateY(0);
   transition: 0.55s 0.5s;
 }
 
-.App-menu--closed .App-button-bar--middle {
+.App-menu--closed .App-burger-bar--middle {
   visibility: visible;
   transition: 0.7s 0.7s;
 }
 
-.App-button-bar {
+.App-burger-bar {
   height: 6px;
   border: 3px;
   width: 100%;
 }
 
-.App-menu--closed .App-button-bar {
+.App-menu--closed .App-burger-bar {
   background-color: var(--SECONDARY-COLOR);
 }
 
-.App-menu--opened .App-button-bar {
+.App-menu--opened .App-burger-bar {
   background-color: var(--PRINCIPAL-COLOR);
 }
 
 @media (min-width: 720px) {
-  .App-button {
+  .App-burger {
     display: none;
   }
 }
@@ -138,7 +138,7 @@
     width: 100%;
   }
   .App-link--menu:hover {
-    color: 	var(--ACCENT-BACKGROUND);
+    color: 	var(--ACCENT-COLOR);
     font-weight: bold;
   }
   .App-link--menu {
