create: card list component

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@
 .App-section__content {
   flex-grow: 1;
   width: 100%;
+  padding: 24px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .light-mode .App-section--contrast {
