--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -2,10 +2,11 @@
   box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(50px, 80px) );
+  grid-template-rows: repeat(auto-fit, minmax(50px, 80px));
   gap: 24px;
   list-style: none;
-  margin: 0;
-  padding: 24px;
+  margin: auto;
+  padding: 0;
   max-width: 900px;
 }
 
