--- a/src/components/Languages/Languages.css
+++ b/src/components/Languages/Languages.css
@@ -1,12 +1,5 @@
 .App-languages {
-  outline: none;
-  border:none;
-  background-image:none;
-  background-color:transparent;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  cursor: pointer;
+  color: var(--CONTRAST-COLOR);
 }
 
 .App-languages.selected {
