--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ button {
 }
 
 /* Remove default padding */
-ul[class],
-ol[class] {
+ul,
+ol {
 	padding: 0;
 }
 
@@ -41,8 +41,8 @@ h2,
 h3,
 h4,
 p,
-ul[class],
-ol[class],
+ul,
+ol,
 li,
 figure,
 figcaption,
@@ -61,7 +61,7 @@ body {
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
+ul,
 ol[class] {
 	list-style: none;
 }
