--- a/src/components/ProgressBar/ProgressBar.css
+++ b/src/components/ProgressBar/ProgressBar.css
@@ -4,7 +4,7 @@
 }
 
 .App-progress-bar__dot {
-  margin: 0 6px;
+  margin: 6px;
   height: 16px;
   width: 16px;
   background-color: var(--PRINCIPAL-COLOR);
