--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: minmax(0, 1fr);
   gap: 24px;
+  cursor: pointer;
 }
 
 .App-timeline__date {
@@ -22,13 +23,25 @@
   padding-bottom: 16px;
 }
 
+.App-timeline__content__description {
+  height: 0;
+  transform: scaleY(0);
+  transition: 0.4s 0.6s;
+}
+
+.selected .App-timeline__content__description {
+  height: 100%;
+  transform: scaleY(1);
+  transition: 0.4s 0.6s;
+}
+
 .App-timeline__dot {
   height: 44px;
   width: 44px;
   background-color: var(--CONTRAST-COLOR);
   border-radius: 50%;
   display: inline-block;
-  border: 1px solid var(--CONTRAST-COLOR);
+  border: 2px solid var(--CONTRAST-COLOR);
   position: absolute;
   left: -22px;
   display: flex;
@@ -36,11 +49,20 @@
   justify-content: center;
 }
 
+.selected .App-timeline__dot {
+  background-color: var(--PRINCIPAL-COLOR);
+}
+
 .App-timeline__dot path,
 .App-timeline__dot svg {
   width: 24px;
   height: 24px;
   fill: var(--PRINCIPAL-COLOR);
+}
+
+.selected .App-timeline__dot path,
+.selected .App-timeline__dot svg {
+  fill: var(--CONTRAST-COLOR);
 }
 
 .App-timeline__tags {
