--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -95,10 +95,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  background-color: rgba(51,51,51,0.7);
 }
 
 .App-menu--opened .App-nav-background {
-  background-color: rgba(51,51,51,0.7);
   visibility: visible;
   transition: 0.7s 0.7s;
 }
@@ -147,5 +147,8 @@
     color: var(--CONTRAST-COLOR);
     margin: 0 12px 0 0;
     display: inline-block;
+  }
+  .App-nav-background {
+    display: none;
   }
 }
